<resources>
    <string name="app_name">LIPT</string>
    <string name="login_page_title">Legally Identical Pokemon Trivia</string>
    <string name="register_new_account">Register New Account</string>
    <string name="log_in">Log In</string>
    <string name="username_hint">(username)</string>
    <string name="password_hint">(password)</string>
    <string name="new_account_registration">New Account Registration</string>
    <string name="rules_for_creation">Rules for Creation</string>
    <string name="registration_rules">1. Username must be between 3-12 characters in length. \n2. Username must include only (a-z) and numbers (0-9). \n3. Password must be between 8-16 characters in length. \n4. Password must include only (a-z) and numbers (0-9). \n5. Password must include at least one number (0-9) \n and one letter (a-z).</string>
    <string name="sign_up">Sign Up</string>
    <string name="return_to_login">Return to Login</string>
    <string name="see_prize_collection">See Prize Collection</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="test">Test</string>
    <string name="hey">Hey!</string>
    <string name="username_record_label">username:</string>
    <string name="rounds_played_label">Rounds Played:</string>
    <string name="accuracy_label">Accuracy:</string>
    <string name="null_string">NOT FOUND</string>
    <string name="welcome">Welcome, </string>
    <string name="menu_user_temp">user</string>
    <string name="menuTrainerLevelLabel">Trainer Level:</string>
    <string name="_42">42</string>
    <string name="play_new_round">Play New Round</string>
    <string name="pokedex_label">Pokedex</string>
    <string name="manage_playerbase">Manage Playerbase</string>
    <string name="trainer_record_label">Trainer Record</string>
    <string name="log_out_menu">Log Out</string>
    <string name="prize_collection_label">Prize Collection</string>
    <string name="play_sound_test">Play Sound</string>
    <string name="temp_pkmn_name">temp_pkmn_name</string>
    <string name="prizes_earned_label">Prizes earned:</string>
    <string name="_0">0</string>
    <string name="gameinstruction1">Play the sound by pressing the center button!</string>
    <string name="gameinstruction2">Then, touch the pokemon which makes that sound.</string>
    <string name="game_question_label_textview">Question:</string>
    <string name="game_current_question_num">1/10</string>
    <string name="pokedexinstruction">Touch and drag to browse the Pokedex!</string>
    <string name="you_leveled_up">You leveled up!</string>
    <string name="current_level_text">Current Level:</string>
    <string name="your_prize">Your prize:</string>
    <string name="nothing">Nothing!</string>
    <string name="play_again">Play Again!</string>
    <string name="_10_10">10/10</string>
    <string name="final_score_label">Final Score:</string>
    <string name="you_must_train_harder">You must train harder</string>
    <string name="nothing_">Nothing!</string>
    <string name="playerid_string">playerID</string>
    <string name="player_name_label">Player Name</string>
    <string name="usernameFill">admin1lovesy</string>
    <string name="rounds_played_">Rounds Played</string>
    <string name="_69">69</string>
    <string name="accuracy_label_">Accuracy</string>
    <string name="_77">77%</string>
    <string name="prizes_earned_">Prizes Earned</string>
    <string name="_19_20">19/20</string>
    <string name="trainer_level_">Trainer Level</string>
    <string name="bulbasaur_">Bulbasaur</string>
    <string name="leek_">Leek</string>
    <string name="username_">username</string>
    <string name="give_rare_candy_">Give Rare Candy</string>
    <string name="delete_account_">Delete Account</string>
    <string name="feed_rare_candy_">Feed Rare Candy</string>
    <string name="delete_self_account">Delete Account</string>
    <string name="reset_trainer_level">Reset Trainer Level</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unearned_prizes_">Unearned Prizes</string>
    <string name="reset_prizes_">Reset Prizes</string>
    <string name="delete_prizes_">Delete Prizes</string>
    <string name="dev_hack_label">Dev Hack!</string>
    <string name="preference_file_key">Login Preferences File Name</string>
    <string name="preference_userId_key">Logged In User ID KEY</string>
    <string name="credits_label">Credits</string>
</resources>