<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">


    <ImageView
        android:id="@+id/loginBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/menu_background1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/menuTitleImage"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginTop="69dp"
        android:src="@drawable/main_menu_title_image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/welcomeMenuTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/welcome"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuTitleImage" />

    <TextView
        android:id="@+id/usernameMenuDisplayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/menu_user_temp"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/welcomeMenuTextView"
        app:layout_constraintTop_toBottomOf="@+id/menuTitleImage" />

    <TextView
        android:id="@+id/trainerLevelMenuLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/menuTrainerLevelLabel"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/welcomeMenuTextView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/trainerLevelMenuDisplayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/_42"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/usernameMenuDisplayText"
        app:layout_constraintStart_toEndOf="@id/trainerLevelMenuLabel"/>


    <Button
        android:id="@+id/newRoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="508dp"
        android:text="@string/play_new_round"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pokedexButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/pokedex_label"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/newRoundButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/trainerRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/trainer_record_label"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/pokedexButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/prizeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/prize_collection_label"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/trainerRecordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/admin_dashboard"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/prizeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/creditsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits_label"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/adminButton"
        app:layout_constraintBottom_toTopOf="@id/exitMenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exitMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/log_out_menu"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>