<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameResultActivity">

    <ImageView
        android:id="@+id/gameResultBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/game_result_background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/gameResultTitleImage"
        android:layout_width="384dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/results_title_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finalScoreLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="75dp"
        android:text="@string/final_score_label"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameResultTitleImage" />

    <TextView
        android:id="@+id/finalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/_10_10"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/finalScoreLabelText"
        app:layout_constraintTop_toBottomOf="@id/gameResultTitleImage" />

    <TextView
        android:id="@+id/levelUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/you_must_train_harder"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finalScoreLabelText" />

    <TextView
        android:id="@+id/currentLevelTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="105dp"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/current_level_text"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/levelUpText" />

    <TextView
        android:id="@+id/currentLevelDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/_0"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/currentLevelTextLabel"
        app:layout_constraintTop_toBottomOf="@id/levelUpText" />

    <TextView
        android:id="@+id/earnedPrizeTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:text="@string/your_prize"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentLevelTextLabel" />

    <TextView
        android:id="@+id/earnedPrizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing_"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/earnedPrizeTextLabel"
        app:layout_constraintTop_toBottomOf="@id/currentLevelTextLabel"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp" />

    <ImageView
        android:id="@+id/resultPrizeImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/earnedPrizeTextLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    
    <ImageView
        android:id="@+id/youLoseGoodDaySir"
        android:layout_width="300dp"
        android:layout_height="165dp"
        android:layout_marginTop="30dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/earnedPrizeTextLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/restartGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/play_again"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/exitGameResultButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exitGameResultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/return_to_menu"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>