<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/loginBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/pokeball_background"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/loginTitleImage"
        android:layout_width="384dp"
        android:layout_height="200dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/login_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginUsernameTextEdit"
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:layout_marginStart="68dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/loginBackgroundImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />


    <EditText
        android:id="@+id/loginPasswordTextEdit"
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUsernameTextEdit" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="160dp"
        android:text="@string/log_in"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginBackgroundImage"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>